# ComputationalLinguistics

./: .gitignore  pyproject.toml
flash_attention/: config.py  data.py  flash_attention_report.md  main.py  models.py  runner.py  utils.py
language_modeling/results/comparison_results/: bdh_output.txt
llm_eval/: analysis.ipynb  evaluation.py  models.py  prompts.py  report.md  runner.py  tasks.py
llm_eval/results/: analysis_summary.txt
llm_eval/results/raw_outputs/: task_01_instruction__deepseek-r1_7b__few_shot.json  task_01_instruction__deepseek-r1_7b__zero_shot.json  task_01_instruction__ministral-3_3b__cot.json  task_01_instruction__ministral-3_3b__few_shot.json  (+46 more)
my_tokenizers/: sentencePieceTokenizer.model  sentencePieceTokenizer.vocab
my_tokenizers/bielik_tokenizer/: tokenizer.json  tokenizer_config.json
reports/: comparison_report.md  sentence_classification.md  tokenizer_report.md
sentence_classification/: evaluate.py  main.py  model.py  test.ipynb  train.py  training_helpers.py
src/: bdh_train.py  config.py  count_words.sh  data.py  evaluate.py  main.py  models.py  test.ipynb
tokenizer_experiments/: config.py  data_utils.py  evaluate.py  prepare_data.py  qualitative_analysis.py  requirements.txt  run_all.sh  tokenizer_utils.py  train.py
tokenizer_experiments/results/: evaluation_bielik.json  evaluation_sentencepiece.json  evaluation_whitespace.json  qualitative_analysis.json  qualitative_report.txt  training_metrics_bielik.json  training_metrics_sentencepiece.json  training_metrics_whitespace.json
tokenizers/: whitespace_tokenizer.json
(+65 files in other folders)
