[project]
name = "lingwistyka-obliczeniowa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "sentencepiece>=0.2.1",
    "speakleash>=0.3.51",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch==2.8.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
