[project]
name = "lingwistyka-obliczeniowa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "ollama>=0.6.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "speakleash>=0.3.51",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch==2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
    "zstandard>=0.25.0",
    "zstd>=1.5.7.2",
]
